--- a/TrackEditor/MainWindow.ui
+++ b/TrackEditor/MainWindow.ui
@@ -194,7 +194,7 @@
             <property name="geometry">
              <rect>
               <x>0</x>
-              <y>-697</y>
+              <y>0</y>
               <width>449</width>
               <height>2000</height>
              </rect>
@@ -2060,8 +2060,8 @@ extra wall height</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>582</width>
-              <height>513</height>
+              <width>120</width>
+              <height>51</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -2138,6 +2138,13 @@ extra wall height</string>
               <widget class="QLabel" name="lblPalletteLoaded">
                <property name="text">
                 <string>PALLETE.PAL not found</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="ckUnmangleTextures">
+               <property name="text">
+                <string>Unmangle</string>
                </property>
               </widget>
              </item>
